@@ -1,3 +1,7 @@
+2007-10-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* chew.c (write_buffer): Check fwrite return value.
+
 2007-09-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* Makefile.in: Regenerate.
